--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,108 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    --bs-blue: #0d6efd;
+    --bs-red: #dc3545;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --bs-body-font-family: var(--bs-font-sans-serif);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #212529;
+    --bs-body-bg: #fff;
+    --bs-button-size-small:
+}
+
+// Button1 CSS
+.button1 {
+    border-radius: inherit;
+    position:relative;
+    background-color: var(--bs-dark);
+    color: var(--bs-white);
+    font-family: var(--bs-font-family);
+    font-Size:17px;
+    border-Radius:10px;
+    margin-Top:30px;
+}
+
+.button1 .button-size-small {
+    font-size: 0.8rem;
+    padding: 0.6rem 1rem;
+}
+
+// button2 CSS
+.button2 {
+    background-color: #4CAF50;
+    border: none;
+    color: var(--bs-white);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.button2 .button-size-medium {
+    font-size: 1rem;
+    padding: 0.8rem 1.3rem;
+}
+
+// button3 CSS
+.button3 {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+  
+.button3 span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+  
+.button3 span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+  
+.button3:hover span {
+    padding-right: 25px;
+}
+  
+.button3:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+.button3 .button-size-large {
+    font-size: 1.2rem;
+    padding: 1rem 1.5rem;
+}
