--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,27 @@
-<button class="button1">
+<!-- <button class="button1">
   click here
 </button><pre></pre>
 
 <button class="button2"><span>Medium button</span></button><pre></pre>
 
-<button class="button3">Unique</button>
+<button class="button3">Unique</button><pre></pre>
+
+<div class="col-3">
+
+  <input class="effect-1" type="text" placeholder="Placeholder Text">
+  <span class="focus-border"></span>
+</div>
+
+<div class="col-3 input-effect">
+  <input class="effect-16" type="text" placeholder="">
+    <label>First Name</label>
+    <span class="focus-border"></span>
+</div>
+
+
+<div class="form__group field">
+  <label for="name" class="form__label">Name</label>
+  <input type="text" placeholder="Name" name="name" id='name' required />
+</div> -->
+
+<app-developer-handbook></app-developer-handbook>
