--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,7 @@
     padding: 20px;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    margin: 5px var(--bs-dark);
 }
   
 .button3 span {
@@ -93,11 +93,9 @@
     transition: 0.5s;
 }
   
-.button3:hover span {
+.button3:hover {
     padding-right: 25px;
-}
-  
-.button3:hover span:after {
+    background-color: #dc3545;
     opacity: 1;
     right: 0;
 }
@@ -105,4 +103,95 @@
 .button3 .button-size-large {
     font-size: 1.2rem;
     padding: 1rem 1.5rem;
+}
+  
+// input Style1
+input[type="text"] {
+    font: 15px/24px 'Muli', sans-serif;
+    color: #333; 
+    width: 100%; 
+    box-sizing: border-box; 
+    letter-spacing: 1px;
+}
+:focus {
+    outline: none;
+}
+.col-3 {
+    float: left; 
+    width: 27.33%; 
+    margin: 40px 3%; 
+    position: relative;
+}
+.effect-1 {
+    border: 0; 
+    padding: 7px 0; 
+    border-bottom: 1px solid #ccc;
+}
+.effect-1 ~ .focus-border {
+    position: absolute; 
+    bottom: 0; 
+    left: 50%; 
+    width: 0; 
+    height: 2px; 
+    background-color: #4caf50; 
+    transition: 0.4s;
+}
+.effect-1:focus ~ .focus-border {
+    width: 100%; 
+    transition: 0.4s;
+    left: 0;
+}
+
+// input2 style
+.effect-16 {
+    border: 0; 
+    padding: 4px 0; 
+    border-bottom: 1px solid #ccc; 
+    background-color: transparent;
+}
+.effect-16 ~ .focus-border {
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    width: 0; 
+    height: 2px; 
+    background-color: #4caf50; 
+    transition: 0.4s;
+}
+.effect-16:focus ~ .focus-border,.has-content.effect-16 ~ .focus-border {
+    width: 100%; 
+    transition: 0.4s;
+}
+.effect-16 ~ label {
+    position: absolute; 
+    left: 0; 
+    width: 100%; 
+    top: 9px; 
+    color: #aaa; 
+    transition: 0.3s; 
+    z-index: -1; 
+    letter-spacing: 0.5px;
+}
+.effect-16:focus ~ label, .has-content.effect-16 ~ label {
+    top: -16px; 
+    font-size: 12px; 
+    color: #4caf50; 
+    transition: 0.3s;
+}
+
+
+.form__group {
+    position: relative;
+    padding: 15px 0 0;
+    margin-top: 10px;
+    width: 50%;
+}
+label .form__label {
+    margin-bottom: 20px;
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: gray;
 }
